add and fix sqmag test

--- a/.github/workflows/an547-tests.yaml
+++ b/.github/workflows/an547-tests.yaml
@@ -28,3 +28,6 @@ jobs:
     - name: Test fx FFT M55
       run: |
         make run-m55-an547-fx_fft
+    - name: Test sqmag M55
+      run: |
+        make run-m55-an547-sqmag
