--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "helight"]
 	path = slothy
 	url = https://github.com/slothy-optimizer/slothy
+[submodule "envs/stm32f767zi-cortex-m7/libopencm3"]
+	path = envs/stm32f767zi-cortex-m7/libopencm3
+	url = git@github.com:libopencm3/libopencm3.git
