--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -13,4 +13,4 @@ jobs:
       run: sudo apt install gcc-arm-none-eabi qemu-system
     - name: Make all
       run: |
-        make run
+        make -j$(nproc) run
