--- a/.github/workflows/standalone.yaml
+++ b/.github/workflows/standalone.yaml
@@ -10,7 +10,7 @@ jobs:
       with:
         submodules: true
     - name: install dependencies
-      run: sudo apt install gcc-arm-none-eabi qemu-system
+      run: sudo apt install gcc-arm-none-eabi
     - name: Package standalone artificats
       run: |
         make -j$(nproc) standalone
