tests checking for last line of output

--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -13,4 +13,4 @@ jobs:
       run: sudo apt install gcc-arm-none-eabi qemu-system
     - name: Make all and run
       run: |
-        make -j$(nproc) run
+        make -j$(nproc) check
