add AN386 support

--- a/envs/m85-an555/Makefile
+++ b/envs/m85-an555/Makefile
@@ -53,7 +53,7 @@ LDFLAGS += \
 
 all: $(TARGET)
 
-HAL_SOURCES = $(wildcard $(SRC_DIR)/*.c) $(wildcard $(SRC_DIR)/*/*.c) $(wildcard ../common/src/*.c)
+HAL_SOURCES = $(wildcard $(SRC_DIR)/*.c) $(wildcard $(SRC_DIR)/*/*.c)
 OBJECTS_HAL = $(patsubst %.c, $(BUILD_DIR)/%.c.o, $(abspath $(HAL_SOURCES)))
 TEST_COMMON_SOURCES = $(wildcard $(TEST_COMMON)/*.c) 
 OBJECTS_TEST_COMMON = $(patsubst %.c, $(BUILD_DIR)/%.c.o, $(abspath $(TEST_COMMON_SOURCES)))
