--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "helight"]
 	path = slothy
 	url = https://github.com/slothy-optimizer/slothy
+[submodule "submodules/mbed-os"]
+	path = submodules/mbed-os
+	url = https://github.com/ARMmbed/mbed-os
