--- a/envs/m85-an555/Makefile
+++ b/envs/m85-an555/Makefile
@@ -36,6 +36,8 @@ CFLAGS += \
 	$(ARCH_FLAGS) \
 	--specs=nosys.specs
 
+CFLAGS += $(CFLAGS_EXTRA)
+
 LDSCRIPT = $(SRC_DIR)/platform/gcc_arm_sse_310.ld
 
 LDFLAGS += \
@@ -55,7 +57,7 @@ all: $(TARGET)
 
 HAL_SOURCES = $(wildcard $(SRC_DIR)/*.c) $(wildcard $(SRC_DIR)/*/*.c) $(wildcard ../common/src/*.c)
 OBJECTS_HAL = $(patsubst %.c, $(BUILD_DIR)/%.c.o, $(abspath $(HAL_SOURCES)))
-TEST_COMMON_SOURCES = $(wildcard $(TEST_COMMON)/*.c) 
+TEST_COMMON_SOURCES = $(wildcard $(TEST_COMMON)/*.c)
 OBJECTS_TEST_COMMON = $(patsubst %.c, $(BUILD_DIR)/%.c.o, $(abspath $(TEST_COMMON_SOURCES)))
 OBJECTS_SOURCES=$(patsubst %.c, $(BUILD_DIR)/%.c.o, $(abspath $(SOURCES)))
 OBJECTS_C = $(OBJECTS_SOURCES) $(OBJECTS_HAL) $(OBJECTS_TEST_COMMON)
@@ -86,6 +88,6 @@ check:
 	@echo "WARNING: AN555 is not supported by qemu. Skipping"
 
 
-clean: 
+clean:
 	rm -f *.elf *.bin
 	rm -rf $(BUILD_DIR)
