add nucleo-f767zi support

--- a/envs/m85-an555/Makefile
+++ b/envs/m85-an555/Makefile
@@ -87,6 +87,8 @@ run:
 check:
 	@echo "WARNING: AN555 is not supported by qemu. Skipping"
 
+flash:
+	@echo "WARNING: Target platform does not support the flash- targets. Skipping"
 
 clean:
 	rm -f *.elf *.bin
