--- a/envs/m85-an555/Makefile
+++ b/envs/m85-an555/Makefile
@@ -19,6 +19,7 @@ CFLAGS += \
 	-ffunction-sections \
 	-fdata-sections \
 	--sysroot=$(SYSROOT) \
+	-DDEVICE=\"an547\" \
 	-DARMCM85 \
 	-I$(COMMON_INC) \
 	-I$(ENV_INC) \
