Add -Werror to compiler flags in Makefiles
- Treats all warnings as errors to prevent regressions
- Applied to m55-an547 and m85-an555 environments

Signed-off-by: Matthias J. Kannwischer <matthias@kannwischer.eu>

--- a/envs/m85-an555/Makefile
+++ b/envs/m85-an555/Makefile
@@ -14,7 +14,7 @@ TEST_COMMON=../../tests/common/
 SYSROOT := $(shell $(CC) --print-sysroot)
 CFLAGS += \
 	-O3 \
-	-Wall -Wextra -Wshadow \
+	-Wall -Wextra -Wshadow -Werror \
 	-fno-common \
 	-ffunction-sections \
 	-fdata-sections \
