--- a/envs/m85-an555/Makefile
+++ b/envs/m85-an555/Makefile
@@ -85,8 +85,9 @@ build: $(TARGET)
 run:
 	@echo "WARNING: AN555 is not supported by qemu. Skipping"
 
+# Platform not supported by QEMU
 check:
-	@echo "WARNING: AN555 is not supported by qemu. Skipping"
+	@echo "SKIP"; exit 2
 
 flash:
 	@echo "WARNING: Target platform does not support the flash- targets. Skipping"
