--- a/envs/ek-ra8m1/Makefile
+++ b/envs/ek-ra8m1/Makefile
@@ -104,8 +104,7 @@ build: $(TARGET)
 
 
 flash: build
-	printf "Sleep 2000\nLoadFile $(TARGET)\nexec SetRTTAddr 0x22000410\ngo\nSleep 3600000" | JLinkExe -if SWD -device R7FA8M1AH -speed auto
-
+	printf "Sleep 2000\nLoadFile $(TARGET)\nreset\nexec SetRTTAddr 0x22000410\ngo\nSleep 3600000" | JLinkExe -if SWD -device R7FA8M1AH -speed auto
 run:
 	@echo "WARNING: Target platform does not support the run-target. Use the flash- target instead to flash to the board. Skipping"
 
