Makefile: Add -std=c99
- Add CFLAGS `-std=c99` to:
  - ek-ra8m1
  - m85-an555
  - m55-an547

- Replace `asm` with `__asm__`.

Signed-off-by: Matthias J. Kannwischer <matthias@kannwischer.eu>
Co-authored-by: willieyz <willie.zhao@chelpis.com>

--- a/envs/ek-ra8m1/Makefile
+++ b/envs/ek-ra8m1/Makefile
@@ -13,6 +13,7 @@ TEST_COMMON=../../tests/common/
 SYSROOT := $(shell $(CC) --print-sysroot)
 CFLAGS += \
 	-O3 \
+	-std=c99 \
 	-Wall -Wextra -Wshadow -Werror \
 	-fno-common \
 	-ffunction-sections \
