--- a/envs/m55-an547/Makefile
+++ b/envs/m55-an547/Makefile
@@ -13,6 +13,7 @@ TEST_COMMON=../../tests/common/
 SYSROOT := $(shell $(CC) --print-sysroot)
 CFLAGS += \
 	-O3 \
+	-std=c99 \
 	-Wall -Wextra -Wshadow -Werror \
 	-fno-common \
 	-ffunction-sections \
