CI: ek-ra8m1 check exit with 2 so CI shows tests as skipped
Otherwise, the tests are shown as successful in the CI logs.

Signed-off-by: Matthias J. Kannwischer <matthias@kannwischer.eu>

--- a/envs/ek-ra8m1/Makefile
+++ b/envs/ek-ra8m1/Makefile
@@ -110,7 +110,7 @@ run:
 	@echo "WARNING: Target platform does not support the run-target. Use the flash- target instead to flash to the board. Skipping"
 
 check:
-	@echo "WARNING: Target platform does not support the check-target. Use the flash- target instead to flash to the board. Skipping"
+	@echo "SKIP"; exit 2
 
 
 clean:
